--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           sphinx-build -M html docs/source/ docs/build/
 
+      - name: Copy CNAME file
+        run: |
+          cp docs/source/CNAME docs/build/html/CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
